<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_map" />
    <item
        android:id="@+id/nearbyFeedFragment"
        android:icon="@drawable/ic_feed"
        android:title="@string/nav_feed" />
    <item
        android:id="@+id/postRequestFragment"
        android:icon="@drawable/ic_post"
        android:title="@string/nav_post" />
    <item
        android:id="@+id/liveChatFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/nav_chat" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
